style_v2.css
@viewport {
  width: device-width ;
  zoom: 1.0 ;
}

html {
  height: 100%;
}

body {
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 8pt;
  margin: 0px;
  color: #FFFFFF;
  background: #000000;
  height: 100%;
  margin: 0px;
  display: flex;
  flex-direction: column;
}

.page {
  height: 100%;
  width: 1400px;
}

.topbar {
  order: 1;
  height: 35px;
  align-items: flex-start;
  flex-wrap: nowrap;
  flex-direction: row;
  cursor: default;
}

.maplink {
  cursor: pointer;
  height: 20;
  display: inline-flex;
  align-self: flex-start;
  flex: auto;
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  padding-left: 5px;
  padding-right: 5px;
  vertical-align: middle;
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 10pt;
  margin: 3px;
}

.maplinkHighlight {
  cursor: pointer;
  height: 20;
  display: inline-block;
  align-self: flex-start;
  border-style: solid;
  border-width: 1px;
  border-radius: 3px;
  padding-left: 5px;
  padding-right: 5px;
  margin: 5px;
  vertical-align: middle;
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 10pt;
  color: #ffff00;
}

.bottomBar {
  order: 2;
  display: flex;
  align-items: flex-start;
  flex-direction: row;
}

.content {
  order: 1;
  align-self: flex-start;
  display: inline-flex;
  position: relative;
  cursor: crosshair;
}

.sidebar {
  order: 2;
  max-width: 400px;
  align-self: flex-start;
  display: inline-flex;
  flex-direction: column;
  position: relative;
  cursor: default;
}

#sidebarMarkerlist {
  display: inline-block;
  z-index: 7;
  float: left;
  background-color: #000000;
  padding-top: 20px;
}

#sidebarDestinationTypelist {
  display: none;
  z-index: 7;
  background-color: #000000;
  padding-top: 20px;
}

#pathfindingSettings {
  display: inline-block;
  z-index: 7;
  background-color: #000000;
  padding-top: 20px;
  padding-top: 20px;
}

select {
  background-repeat:no-repeat;
  background-position:bottom left;
  border: 1px solid #00FF00;
  background-color: #003300;
  border-radius: 3px;
  color: white;
}

a:visited {
  color: #FFFFFF;
}

a:link {
  color: #CCCCCC;
}

a:active {
  color: #FFFFFF;
}

a:hover {
  color: #FFFFFF;
}

.defaultPlane {
  cursor: crosshair;
}

.planes {
  cursor: crosshair;
  display: none;
}

.badges {
  cursor: crosshair;
  display: none;
  position: absolute;
  left: 0px;
  z-index:8;
}

.guilds {
  cursor: crosshair;
  display: none;
  position: absolute;
  left: 0px;
  z-index:8;
}

.districts {
  display: none;
  position: absolute;
  left: 0px;
  z-index:4;
}

#tooltiptext {
  vertical-align:top;
  display: inline-block;
}

#tooltipControls {
  vertical-align:top;
  display: inline-block;
}

#tooltipControlsButtonCycle {
  cursor: pointer;
  margin: 5px;
  padding: 2px;
  border: 1px solid #00ffff;
  background-color: #003333;
  border-radius: 3px;
  float: left;
}

#tooltipControlsButtonEnter {
  cursor: pointer;
  margin: 5px;
  padding: 2px;
  border: 1px solid #00ff00;
  background-color: #003300;
  border-radius: 3px;
  float: left;
}

#tooltipControlsButtonCancel {
  cursor: pointer;
  margin: 5px;
  padding: 2px;
  border: 1px solid #ff0000;
  background-color: #330000;
  border-radius: 3px;
  float: left;
}

#previewmap {
  margin: 5px;
  margin-left: 20px;
  background: url(mini-valhalla.png);
  background-position: -0px -0px;
  display: inline-block;
  background-repeat: no-repeat;
  width: 108;
  height: 108;
}

#overlay {
  position: absolute;
  width: 1008px;
  height: 1008px;
  z-index: 7;
  background-color: #000000;
  opacity: 0.5;
  display: none;
}

#overlay2 {
  position: absolute;
  height: 1008px;
  z-index: 7;
  background-color: #000000;
  opacity: 0.5;
  display: none;
}

#overlay3 {
  position: absolute;
  height: 1008px;
  z-index: 7;
  background-color: #000000;
  opacity: 0.5;
  display: none;
}

#overlay4 {
  position: absolute;
  width: 1008px;
  height: 1008px;
  z-index: 7;
  background-color: #000000;
  opacity: 0.5;
  display: none;
}

#tooltip {
  font-family: Verdana, Arial, Helvetica, sans-serif;
  font-size: 10pt;
  position: absolute;
  left: 0px;
  top: -200px;
  max-width:500px;
  z-index: 20;
  border: 1px solid #ffffff;
  border-radius: 5px;
  padding: 3px;
  color: #ffffff;
  background-color: rgba(0,0,0,0.8)
}

#you {
  position: absolute;
  left: -80px;
  top: -80px;
  z-index: 9;
}

#pointer {
  position: absolute;
  left: -80px;
  top: -80px;
  z-index: 6;
}

#signal {
  position: absolute;
  left: -200px;
  top: -200px;
  z-index: 8;
}

.marker {
  width: 23;
  height: 23px;
  background: url(icons/marker.gif);
  position: absolute;
  z-index: 7;
}

.badgeMarker {
  display: block;
  width: 72px;
  height: 72px;
  position: absolute;
  z-index: 7;
}

.guildMarker {
  display: block;
  width: 72px;
  height: 72px;
  position: absolute;
  z-index: 7;
}

.markerinfo {
  border: 0px solid #ffffff;
  border-radius: 5px;
  margin: 10px;
  background-color: #000000;
  vertical-align: top;
}

.destinationTypeButtons {
  display: inline-block;
  border: 0px solid #ffffff;
  border-radius: 5px;
  margin: 10px;
  background-color: #000000;
  vertical-align: top;
}

.markerLocationText {
  display:inline-block;
}

.markerUIbuttonRed {
  float: right;
  display: inline-block;
  padding: 2px;
  margin-left: 10px;
  border: 1px solid #ff0000;
  background-color: #330000;
  border-radius: 3px;
  cursor: pointer;
}

.markerUIbuttonBlue {
  float: right;
  display: inline-block;
  padding: 2px;
  margin-left: 10px;
  border: 1px solid #00FFFF;
  background-color: #003333;
  border-radius: 3px;
  cursor: pointer;
}

.markerUIbuttonGreen {
  float: right;
  display: inline-block;
  padding: 2px;
  margin-left: 10px;
  border: 1px solid #00ff00;
  background-color: #003300;
  border-radius: 3px;
  cursor: pointer;
  display: none;
}

@media only screen
and (min-device-width : 375px)
and (max-device-width : 812px) {
}

@-ms-viewport {
}

